--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </header>
 
     <div class="image-section">
-      <img src="C:\Users\dell\Downloads\bday incatation\allen's bday.jpeg">
+      <img src=<"allen's bday.jpeg">
     </div>
 
     <div class="content">
@@ -155,4 +155,5 @@
   </div>
 
 </body>
+
 </html>
